<resources>
    <string name="app_name">Tiện ích cá nhân</string>
    <string name="app_info">Phiên bản 1.0\nTác giả : Kỹ sư Lưu Thành Nhựt\nTác quyền 2016</string>
    <string name="btnCuocHen">Cuộc hẹn</string>
    <string name="btnKaraoke">Karaoke</string>
    <string name="btnTinNhan">Tin nhắn</string>
    <string name="btnGame">Trò chơi</string>
    <string name="btnHinhPhim">Hình Phim</string>
    <string name="btnDoiTien">Đổi tiền</string>
    <string name="btnBanDo">Bản đồ</string>
    <string name="btnGhiChu">Ghi chú</string>
    <string name="btnDongBoMayTinh">Đồng bộ</string>
    <string name="Button_chonThuMuc_selectFolderDialog_tigiaactivity">Chọn nơi lưu</string>
    <string name="Button_label_ok_MyDialog_passwordDialog">Tiếp</string>
    <string name="Button_label_close_MyDialog_passwordDialog">Thoát</string>
    <string name="mnuThem">Thêm</string>
    <string name="mnuXoaHet">Xóa hết</string>
    <string name="mnuDocTuFile">Đọc từ file</string>
    <string name="mnuGhiRaFile">Ghi ra file</string>
    <string name="mnuChinhSua">Chỉnh sửa</string>
    <string name="mnuXoa">Xóa</string>
    <string name="mnuTatMo">Tắt/Mở</string>
    <string name="mnuPasteTuClipBoard">Lấy từ clipboard</string>
    <string name="mnuLayTinNhan">Lấy tin nhắn</string>
    <string name="mnuLayTuDanhBa">Lấy từ danh bạ</string>
    <string name="mnuNhapTay">Nhập tay</string>
    <string name="mnuLayTuGoogleMap">Lấy từ Google map</string>
    <string name="mnuTaoNhomMoi_quanlytinnhan">Tạo nhóm</string>
    <string name="mnuXoaNhom_quanlytinnhan">Xóa nhóm</string>
    <string name="mnuXoaHetTinNhan_quanlytinnhan">Xóa hết</string>
    <string name="mnuXoaNhieuTinNhan_quanlytinnhan">Xóa nhiều</string>
    <string name="mnuSapXepTheoThoiGian_quanlytinnhan">Sắp xếp theo thời gian</string>
    <string name="mnuSapXepTheoContact_quanlytinnhan">Sắp xếp theo liên hệ</string>
    <string name="mnuTimKiem_quanlytinnhan">Tìm kiếm</string>
    <string name="mnuSapXepTheoLoai_quanlytinnhan">Sắp xếp theo loại</string>
    <string name="mnuSapXep_other">Khác</string>
    <string name="mnuThietDatNhacChuongTinNhan_quanlytinnhan">Tiếng chuông tin nhắn</string>
    <string name="mnuAddNumberKeyword_quanlytinnhan">Thêm số đt/từ khóa rác</string>
    <string name="mnuDeleteNumberKeyword_quanlytinnhan">Xóa số đt/từ khóa</string>
    <string name="mnuDeleteMessageCalllog_quanlytinnhan">Xóa tin nhắn/cuộc gọi spam</string>
    <string name="mnuNhom_quanlytinnhan">Nhóm</string>
    <string name="mnuThietDatNhom_quanlytinnhan">Vào nhóm</string>
    <string name="mnuContact_quanlytinnhan">Liên lạc</string>
    <string name="mnuTaoContactMoi_quanlytinnhan">Thêm liên lạc</string>
    <string name="mnuXoaHetContact_quanlytinnhan">Xóa hết liên lạc</string>
    <string name="mnuXoaNhieuContact_quanlytinnhan">Xóa nhiều liên lạc</string>
    <string name="mnuSapXep_quanlytinnhan">Sắp xếp</string>
    <string name="mnuSapXepTheoGroup_quanlytinnhan">Sắp xếp theo nhóm</string>
    <string name="mnuDaoSapXep_quanlytinnhan">Đảo thứ tự</string>
    <string name="mnuGuiTinNhan_quanlytinnhan">Gửi tin nhắn</string>
    <string name="mnuGoiDienThoai_quanlytinnhan">Gọi điện</string>
    <string name="mnuXoaDia_quanlytinnhan">Xóa đĩa</string>
    <string name="mnuXoaPhoneSim_quanlytinnhan">Xóa phone/sim</string>
    <string name="mnuLayDataPhone_quanlytinnhan">Lấy từ máy và sim</string>
    <string name="mnuLayDataFile_quanlytinnhan">Lấy từ tập tin</string>
    <string name="mnuImportContactFromFile_quanlytinnhan">Đọc tập tin liên hệ</string>
    <string name="Toast_XoaHet">Đã xóa hết cuộc hẹn!</string>
    <string name="Toast_Xoa">Đã xóa!</string>
    <string name="Toast_TatMo_Tat">Đã tắt cảnh báo cuộc hẹn!</string>
    <string name="Toast_TatMo_Mo">Đã bật cảnh báo cuộc hẹn!</string>
    <string name="Toast_TatMoQuaNgay">Cuộc hẹn đã quá ngày!</string>
    <string name="Toast_Them">Đã thêm cuộc hẹn vào</string>
    <string name="Toast_GhiRaFile_ThanhCong">Đã lưu ra file thành công</string>
    <string name="Toast_GhiRaFile_BiLoi">Ghi ra file bị lỗi!</string>
    <string name="Toast_txtlistInput_ChiTietCuocHen">Đã lưu</string>
    <string name="Toast_theodoiduongdi_bando_unlock">Mở khóa và ngừng theo dấu</string>
    <string name="Toast_theodoiduongdi_bando_lock">Khóa và bắt đầu theo dấu</string>
    <string name="Toast_theodoiduongdi_bando_gosofaraway">Bạn đi sai đường rồi</string>
    <string name="Toast_theodoiduongdi_bando_gpsoff">GPS đang tắt</string>
    <string name="Toast_theodoiduongdi_bando_wifi3goff">Wifi và 3G đều đang tắt</string>
    <string name="Toast_loaddone_tigia">Tải hoàn tất</string>
    <string name="Toast_xacthucpassword_wrongpass">Sai mật khẩu</string>
    <string name="Toast_xacthucpassword_notduplicated">Mật khẩu 2 lần không khớp</string>
    <string name="Toast_xacthucpassword_changepassok">Mật khẩu thay đổi xong</string>
    <string name="Toast_encryptedfinish_dongboact">Mã hóa xong</string>
    <string name="Toast_uploadfinish_dongboact">Tải lên xong</string>
    <string name="Toast_nophonenetwork_xacthuc_kiemtrachucnangphone">Thiết bị này không có chức năng nghe gọi</string>
    <string name="Toast_deliverymessage_sendSMS">Gửi OK</string>
    <string name="Toast_deliverymessage_sendSMS_OK">Đã gửi</string>
    <string name="Toast_deliverymessage_sendSMS_failed">Gửi thất bại</string>
    <string name="Toast_deliverymessage_sendSMS_radio_off">Radio bị tắt</string>
    <string name="Toast_deliverymessage_sendSMS_noPDU">Không có PDU</string>
    <string name="Toast_deliverymessage_sendSMS_noService">Không có dịch vụ</string>
    <string name="Toast_savedRingTone_showRingtoneList_MyPhone">Nhạc chuông đã được chọn</string>
    <string name="Toast_Dongboactivity_finish_exportzipfile_ok">Xuất ra tập tin nén xong.</string>
    <string name="Toast_Dongboactivity_finish_exportzipfile_falied">Xuất ra tập tin nén bị lỗi!</string>
    <string name="Toast_Dongboactivity_BackupToGoogleDriver">Sao lưu lên Google Drive thành công</string>
    <string name="Toast_Dongboactivity_uploadwifi_nowifi">Không có kết nối wifi</string>
    <string name="Toast_Dongboactivity_uploadGG_nointernet">Không có kết nối mạng</string>
    <string name="txtTemp_timdiadiem_bando_lowconnection">Mạng quá chậm</string>
    <string name="AlertDialog_Title_ChonFileDoc_QuanLyCuocHen">Chọn tập tin để đọc</string>
    <string name="AlertDialog_Title_TenFileLuu_QuanLyCuocHen">Nhập vào tên tập tin cần lưu</string>
    <string name="AlertDialog_Title_ChiTietCuocHen_GoogleMapAPIGooglePlaceAPI">Chọn loại bản đồ</string>
    <string name="AlertDialog_Content_ChiTietCuocHen_GoogleMapAPIGooglePlaceAPI">Bạn muốn dùng loại bản đồ nào</string>
    <string name="AlertDialog_button_ChiTietCuocHen_GooglePlacesAPI">Các địa điểm Google</string>
    <string name="AlertDialog_button_ChiTietCuocHen_GoogleMapAPI">Bản đồ Google</string>
    <string name="AlertDialog_label_latitude_vitri">Vĩ độ</string>
    <string name="AlertDialog_label_longtitude_vitri">Kinh độ</string>
    <string name="AlertDialog_label_name_vitri">Tên vị trí</string>
    <string name="AlertDialog_label_note_vitri">Ghi chú</string>
    <string name="AlertDialog_title_vitri">Lưu vị trí</string>
    <string name="AlertDialog_button_save_vitri">Lưu</string>
    <string name="AlertDialog_button_cancel_vitri">Đóng</string>
    <string name="AlertDialog_textview_delete_vitri">Xóa</string>
    <string name="AlertDialog_menutitle_quanlytinnhan_call">Gọi</string>
    <string name="AlertDialog_menutitle_quanlytinnhan_reply">Trả lời</string>
    <string name="AlertDialog_menutitle_quanlytinnhan_sendmessage">Gửi tin</string>
    <string name="AlertDialog_menutitle_quanlytinnhan_copyphonenumber">Lấy số điện thoại</string>
    <string name="AlertDialog_menutitle_quanlytinnhan_copycontent">Lấy nội dung</string>
    <string name="AlertDialog_textview_showinfowindow_vitri">Hiển thị bảng thông tin</string>
    <string name="AlertDialog_textview_Center_vitri">Chính giữa</string>
    <string name="AlertDialog_title_findplace_byMarkerName">Nhập tên marker</string>
    <string name="AlertDialog_button_timkiem_findplace_byMarkerName">Tìm</string>
    <string name="AlertDialog_button_timkiem_findplace_byPosition">Đi đến</string>
    <string name="AlertDialog_button_timkiem_findway">Tìm đường đi</string>
    <string name="AlertDialog_title_SaveMapInstruction_TimDuongDi">Nhập tên đường đi</string>
    <string name="AlertDialog_buttonSave_SaveMapInstruction_TimDuongDi">Lưu</string>
    <string name="AlertDialog_title_quanlytinnhan">Nhập tên nhóm</string>
    <string name="AlertDialog_title_quanlytinnhan_editcontact">Nhập thông tin liên lạc</string>
    <string name="AlertDialog_menutitle_quanlytinnhan_editcontact">Thông tin</string>
    <string name="AlertDialog_Title_TenFileTimKiem_QuanLyTinNhan">Tìm kiếm</string>
    <string name="AlertDialog_Title_NhapTenDataFile_QuanLyTinNhan">Nhập đường dẫn file dữ liệu</string>
    <string name="AlertDialog_guiquawifi_xong">Gửi tập tin xong</string>
    <string name="AlertDialog_Toast_addok_vitri">Đã lưu</string>
    <string name="AlertDialog_Toast_markernotfound_vitri">Không tìm thấy</string>
    <string name="AlertDialog_Toast_saveok_TimDuongDi">Đã lưu</string>
    <string name="Notification_backupimage_GG_title">Sao lưu hình, phim ...</string>
    <string name="Notification_compressImage_GG">Đang nén ...</string>
    <string name="Notification_uploadstart_GG">Đang tải lên ...</string>
    <string name="Notification_backupfinished_GG">Sao lưu hoàn tất</string>
    <string name="Notification_downloadtitle_GG">Tải sao lưu</string>
    <string name="Notification_downloadstart_GG">Bắt đầu tải về</string>
    <string name="Notification_downloadonProgress_GG">Đang tải về</string>
    <string name="Notification_downloadfinish_GG">Tải về kết thúc</string>
    <string name="AlertDialog_contact_quanlytinnhan_ten">Tên</string>
    <string name="AlertDialog_contact_quanlytinnhan_phonenumber">Số điện thoại</string>
    <string name="AlertDialog_contact_quanlytinnhan_email">Email</string>
    <string name="AlertDialog_contact_quanlytinnhan_skype">Tải khoản Skype</string>
    <string name="AlertDialog_contact_quanlytinnhan_viper">Tải khoản Viper</string>
    <string name="AlertDialog_contact_quanlytinnhan_zalo">Tải khoản Zalo</string>
    <string name="AlertDialog_contact_quanlytinnhan_yahoo">Tải khoản Yahoo</string>
    <string name="AlertDialog_contact_quanlytinnhan_facebook">Tải khoản Facebook</string>
    <string name="AlertDialog_contact_quanlytinnhan_twitter">Tải khoản Twitter</string>
    <string name="AlertDialog_contact_quanlytinnhan_googleplus">Tải khoản Google+</string>
    <string name="AlertDialog_thietdatnhom_quanlytinnhan">Chọn nhóm</string>
    <string name="OptionMenu_BanDo_CheDoHienThi">Chế độ bản đồ</string>
    <string name="OptionMenu_BanDo_Normal">Bình thường</string>
    <string name="OptionMenu_BanDo_Satellite">Vệ tinh</string>
    <string name="OptionMenu_BanDo_Terrain">Lục địa</string>
    <string name="OptionMenu_BanDo_Hybrid">Kết hợp</string>
    <string name="OptionMenu_BanDo_CheDoDinhVi">Hệ thống Định vị</string>
    <string name="OptionMenu_BanDo_CheDoGPS">GPS</string>
    <string name="OptionMenu_BanDo_CheDoWifi3G">Wifi_3G</string>
    <string name="OptionMenu_BanDo_ChucNangBanDo">Bản đồ</string>
    <string name="OptionMenu_BanDo_XoaHetMarker">Ẩn các đánh dấu</string>
    <string name="OptionMenu_BanDo_XoaSavedMarker">Xóa marker lưu trên đĩa</string>
    <string name="OptionMenu_BanDo_LuuMarker">Lưu vào đĩa các đánh dấu</string>
    <string name="OptionMenu_BanDo_DocMarker">Đọc từ đĩa các đánh dấu</string>
    <string name="OptionMenu_BanDo_showSavedMarker">Danh sách các đánh dấu</string>
    <string name="OptionMenu_BanDo_findplace">Tìm kiếm</string>
    <string name="OptionMenu_BanDo_findplace_byMarkerName">Theo tên đánh dấu</string>
    <string name="OptionMenu_BanDo_findplace_byPosition">Theo vị trí</string>
</resources>